testcases/negative/invalid_property_name.vcf
BEGIN:VCARD
VERSION:4.0
FN:John Doe
INVALID PROPERTY:Some Value
END:VCARD
